@@ -6,6 +6,7 @@
 - In ausearch, allow searching for auid -1
 - Fix memory leak in aureport
 - Fix parsing state problem in libauparse
+- Update prelude support
 
 1.7.18
 - Update time examples in ausearch/report man pages
